--- a/updatecli/updatecli.d/charts/autoscaler.yaml
+++ b/updatecli/updatecli.d/charts/autoscaler.yaml
@@ -1,4 +1,4 @@
-title: Bump autoscaler helm chart version
+name: Bump autoscaler helm chart version
 
 scms:
   default:
@@ -15,6 +15,7 @@ scms:
 sources:
   lastChartVersion:
     kind: helmchart
+    name: get last chart version
     spec:
       url: https://kubernetes.github.io/autoscaler
       name: cluster-autoscaler
@@ -33,8 +34,7 @@ pullrequests:
   default:
     kind: github
     scmid: default
-    targets:
-      - updateChartVersion
+    title: Bump `autoscaler` helm chart version to {{ source "lastChartVersion" }}
     spec:
       labels:
         - dependencies
