--- a/updatecli/updatecli.d/charts/falco.yaml
+++ b/updatecli/updatecli.d/charts/falco.yaml
@@ -1,4 +1,4 @@
-title: Bump falco helm chart version
+name: Bump falco helm chart version
 
 scms:
   default:
@@ -15,6 +15,7 @@ scms:
 sources:
   lastChartVersion:
     kind: helmchart
+    name: get last chart version
     spec:
       url: https://falcosecurity.github.io/charts
       name: falco
@@ -33,8 +34,7 @@ pullrequests:
   default:
     kind: github
     scmid: default
-    targets:
-      - updateChartVersion
+    title: Bump `falco` helm chart version to {{ source "lastChartVersion" }}
     spec:
       labels:
         - dependencies
