--- a/updatecli/updatecli.d/charts/grafana-promtail.yaml
+++ b/updatecli/updatecli.d/charts/grafana-promtail.yaml
@@ -1,4 +1,4 @@
-title: Bump promtail helm chart version
+name: Bump promtail helm chart version
 
 scms:
   default:
@@ -15,6 +15,7 @@ scms:
 sources:
   lastChartVersion:
     kind: helmchart
+    name: get last chart version
     spec:
       url: https://grafana.github.io/helm-charts
       name: promtail
@@ -33,8 +34,7 @@ pullrequests:
   default:
     kind: github
     scmid: default
-    targets:
-      - updateChartVersion
+    title: Bump `promtail` helm chart version to {{ source "lastChartVersion" }}
     spec:
       labels:
         - dependencies
