--- a/updatecli/updatecli.d/docker-images/jenkins-weekly.yaml
+++ b/updatecli/updatecli.d/docker-images/jenkins-weekly.yaml
@@ -1,4 +1,4 @@
-title: "Bump Jenkins weekly docker image version"
+name: "Bump Jenkins Weekly docker image version"
 
 scms:
   default:
@@ -51,9 +51,7 @@ pullrequests:
   default:
     kind: github
     scmid: default
-    targets:
-      - updateReleaseInConfig
-      - updateReleaseInWeeklyConfig
+    title: Bump Jenkins Weekly docker image version to {{ source "latestRelease" }}
     spec:
       labels:
         - dependencies
