--- a/config/ext_jenkins-infra_temp-privatek8s.yaml
+++ b/config/ext_jenkins-infra_temp-privatek8s.yaml
@@ -12,3 +12,8 @@ controller:
                     description: "Kubeconfig file for temp-privatek8s"
                     scope: SYSTEM
                     secretBytes: "${base64:${KUBECONFIG_TEMP_PRIVATEK8S}}"
+  # Can be omitted, here to avoid modifying temp-privatek8s config
+  podSecurityContextOverride:
+    runAsNonRoot: true
+    runAsUser: 1000
+    supplementalGroups: [1000]
