--- a/clusters/temp-privatek8s.yaml
+++ b/clusters/temp-privatek8s.yaml
@@ -56,8 +56,9 @@ releases:
       - public-nginx-ingress/public-nginx-ingress # Required to expose the webhooks endpoint (secondary ingress of the jenkins helm chart)
       - private-nginx-ingress/private-nginx-ingress # Required to expose the Web UI to the VPN (primary ingress of the jenkins helm chart)
     values:
+      - "../config/ext_jenkins-infra__common.yaml"
+      - "../config/ext_jenkins-infra_temp-privatek8s.yaml.gotmpl"
       - "../config/ext_jenkins-infra_temp-privatek8s.yaml"
-      - "../config/ext_jenkins-infra__common.yaml.gotmpl"
     secrets:
       - "../secrets/config/infra.ci.jenkins.io/jenkins-secrets.yaml"
   - name: jenkins-infra-additional
